force-app/main/default/objects/Closing_Commission__c/Closing_Commission__c.object-meta.xml
<CustomObject>
    <label>Closing Commission</label>
    <nameField>
        <displayFormat>CC -{0000}</displayFormat>
        <label>Closing Commission Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Closing Commission</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>