force-app/main/default/objects/Closing_Commission__c/fields/Agent_Profile__c.field-meta.xml
<CustomField>
    <fullName>Agent_Profile__c</fullName>
    <formula>Lux_Agent__r.Profile.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agent Profile</label>
    <type>Text</type>
</CustomField>