force-app/main/default/objects/Closing_Commission__c/fields/Agent_Split_Commision_Amount__c.field-meta.xml
<CustomField>
    <fullName>Agent_Split_Commision_Amount__c</fullName>
    <formula>IF(ISPICKVAL(Agent_Split_Commision_Type__c, &quot;Percent&quot;), 
     Agent_Split_Commission1__c  * Commission_Amount__c, 
     Agent_Split_Commission1__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agent Split Commision Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>