force-app/main/default/objects/Closing_Commission__c/fields/Agent_Split_Commision_Type__c.field-meta.xml
<CustomField>
    <fullName>Agent_Split_Commision_Type__c</fullName>
    <label>Agent Split Commision Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Percent</fullName>
            </value>
            <value>
                <fullName>Value</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>