force-app/main/default/objects/Closing_Commission__c/fields/Agent_Split_Commission1__c.field-meta.xml
<CustomField>
    <fullName>Agent_Split_Commission1__c</fullName>
    <label>Agent Split Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>