force-app/main/default/objects/Closing_Commission__c/fields/Agent_Type__c.field-meta.xml
<CustomField>
    <fullName>Agent_Type__c</fullName>
    <label>Internal Agent Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Exclusive Broker</fullName>
            </value>
            <value>
                <fullName>Resale Broker</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>