force-app/main/default/objects/Closing_Commission__c/fields/CC_Listing_Address__c.field-meta.xml
<CustomField>
    <fullName>CC_Listing_Address__c</fullName>
    <label>CC Listing Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>