force-app/main/default/objects/Closing_Commission__c/fields/Check_Commission_1__c.field-meta.xml
<CustomField>
    <fullName>Check_Commission_1__c</fullName>
    <formula>IF(AND(Commission_Amount__c &lt;&gt;  Closing__r.gsir_second_broker_split_amount__c , Lux_Agent__c =   Closing__r.gsir_second_broker__c ), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>2 Check Commission</label>
    <type>Checkbox</type>
</CustomField>