force-app/main/default/objects/Closing_Commission__c/fields/Check_Owner_Agent__c.field-meta.xml
<CustomField>
    <fullName>Check_Owner_Agent__c</fullName>
    <formula>Lux_Agent__c  &lt;&gt;  OwnerId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Owner/Agent</label>
    <type>Checkbox</type>
</CustomField>