force-app/main/default/objects/Closing_Commission__c/fields/Cheque_Released_by_Finance__c.field-meta.xml
<CustomField>
    <fullName>Cheque_Released_by_Finance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cheque Released by Finance</label>
    <type>Checkbox</type>
</CustomField>