force-app/main/default/objects/Closing_Commission__c/fields/Closing__c.field-meta.xml
<CustomField>
    <fullName>Closing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Closing</label>
    <referenceTo>pba__Closing__c</referenceTo>
    <relationshipLabel>Closing Commission</relationshipLabel>
    <relationshipName>Closing_Commission</relationshipName>
    <type>Lookup</type>
</CustomField>