force-app/main/default/objects/Closing_Commission__c/fields/Closing_Name__c.field-meta.xml
<CustomField>
    <fullName>Closing_Name__c</fullName>
    <formula>Closing__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closing Name</label>
    <type>Text</type>
</CustomField>