force-app/main/default/objects/Closing_Commission__c/fields/Closing_Resale_Project__c.field-meta.xml
<CustomField>
    <fullName>Closing_Resale_Project__c</fullName>
    <formula>IF( ISPICKVAL(Closing__r.pba__Listing__r.gsir_mandate__c,&apos;Exclusive&apos; ) ,&apos;Project&apos;, &apos;Resale&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closing Resale/Project</label>
    <type>Text</type>
</CustomField>