force-app/main/default/objects/Closing_Commission__c/fields/Closing_Status__c.field-meta.xml
<CustomField>
    <fullName>Closing_Status__c</fullName>
    <formula>TEXT(Closing__r.Closing_Status__c)</formula>
    <label>Closing Status</label>
    <type>Text</type>
</CustomField>