force-app/main/default/objects/Closing_Commission__c/fields/Company_Split_Commision_Amount__c.field-meta.xml
<CustomField>
    <fullName>Company_Split_Commision_Amount__c</fullName>
    <formula>Commission_Amount__c  -  Agent_Split_Commision_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company Split Commision Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>