force-app/main/default/objects/Closing_Commission__c/fields/Is_Closing_Broker__c.field-meta.xml
<CustomField>
    <fullName>Is_Closing_Broker__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Closing Broker?</label>
    <type>Checkbox</type>
</CustomField>