force-app/main/default/objects/Closing_Commission__c/fields/Is_Login_User__c.field-meta.xml
<CustomField>
    <fullName>Is_Login_User__c</fullName>
    <formula>IF($User.Id = Lux_Agent__c , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Login User</label>
    <type>Checkbox</type>
</CustomField>