force-app/main/default/objects/Closing_Commission__c/fields/Is_Owner_Assignment_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Is_Owner_Assignment_Eligible__c</fullName>
    <formula>true</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Owner Assignment Eligible</label>
    <type>Checkbox</type>
</CustomField>