force-app/main/default/objects/Closing_Commission__c/fields/IsClosing_Share__c.field-meta.xml
<CustomField>
    <fullName>IsClosing_Share__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsClosing Share</label>
    <type>Checkbox</type>
</CustomField>