force-app/main/default/objects/Closing_Commission__c/fields/Lux_Agent__c.field-meta.xml
<CustomField>
    <fullName>Lux_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Internal Agent</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Closing_Commission</relationshipName>
    <type>Lookup</type>
</CustomField>