force-app/main/default/objects/Closing_Commission__c/fields/Lux_Agent_Check__c.field-meta.xml
<CustomField>
    <fullName>Lux_Agent_Check__c</fullName>
    <formula>Closing__r.Name +&quot;-&quot;+   Lux_Agent__r.FirstName +&apos; &apos; +Lux_Agent__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Internal Agent Check</label>
    <type>Text</type>
</CustomField>