force-app/main/default/objects/Closing_Commission__c/fields/Share_User__c.field-meta.xml
<CustomField>
    <fullName>Share_User__c</fullName>
    <formula>OwnerId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Share User</label>
    <type>Text</type>
</CustomField>