force-app/main/default/objects/Closing_Commission__c/fields/Sharing_Region__c.field-meta.xml
<CustomField>
    <fullName>Sharing_Region__c</fullName>
    <label>Sharing Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>New_Region</valueSetName>
    </valueSet>
</CustomField>