force-app/main/default/objects/Closing_Commission__c/fields/Third_Party_Agent__c.field-meta.xml
<CustomField>
    <fullName>Third_Party_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>3rd Party Agency</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Closing Commission</relationshipLabel>
    <relationshipName>Closing_Commission</relationshipName>
    <type>Lookup</type>
</CustomField>