force-app/main/default/objects/Closing_Commission__c/fields/Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Type__c</fullName>
    <formula>TEXT(Closing__r.gsir_transaction_type__c)</formula>
    <label>Transaction Type</label>
    <type>Text</type>
</CustomField>