force-app/main/default/objects/Closing_Commission__c/fields/User_Division_1__c.field-meta.xml
<CustomField>
    <fullName>User_Division_1__c</fullName>
    <formula>IF( AND( Lux_Agent__c =  Closing__r.EP_Closing_Broker__c, NOT(Is_Closing_Broker__c) ) ,True,False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Exclusive Broker?</label>
    <type>Checkbox</type>
</CustomField>