force-app/main/default/objects/Closing_Commission__c/fields/X3rd_Party_Agency__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Party_Agency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>3rd Party Agency Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Closing Commission</relationshipLabel>
    <relationshipName>Closing_Commission</relationshipName>
    <type>Lookup</type>
</CustomField>