force-app/main/default/objects/Closing_Commission__c/fields/X3rd_Party_Name__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Party_Name__c</fullName>
    <label>3rd Party Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>