force-app/main/default/objects/Closing_Commission__c/fields/X4_Check_Commission__c.field-meta.xml
<CustomField>
    <fullName>X4_Check_Commission__c</fullName>
    <formula>IF(AND(Commission_Amount__c &lt;&gt;  Closing__r.gsir_fourth_broker_split_amount__c , Lux_Agent__c =  Closing__r.gsir_fourth_broker__c ), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>4 Check Commission</label>
    <type>Checkbox</type>
</CustomField>