force-app/main/default/objects/Closing_Commission__c/validationRules/Lux_Agent_Selected_Agent_Type_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Lux_Agent_Selected_Agent_Type_mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Lux_Agent__c)),
    ISBLANK(TEXT(Agent_Type__c))
)</errorConditionFormula>
    <errorDisplayField>Agent_Type__c</errorDisplayField>
    <errorMessage>Agent Type is required  if Lux Agent Selected</errorMessage>
</ValidationRule>