force-app/main/default/objects/Closing_Commission__c/validationRules/Lux_agent_type_is_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Lux_agent_type_is_Mandatory</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
(Lux_Agent__c !=NULL ),
 ISBLANK( TEXT(Lux_Agent_Type__c))
)</errorConditionFormula>
    <errorMessage>Lux Agent Type is Mandatory.</errorMessage>
</ValidationRule>