force-app/main/default/objects/Closing_Commission__c/validationRules/Select_3rd_Party_Agent_or_Lux_Agent.validationRule-meta.xml
<ValidationRule>
    <fullName>Select_3rd_Party_Agent_or_Lux_Agent</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
AND(Third_Party_Agent__c = NULL ,Lux_Agent__c = NULL),
AND( Third_Party_Agent__c!=NULL, Lux_Agent__c!=NULL))</errorConditionFormula>
    <errorMessage>Please select either 3rd Party Agent OR Lux Agent - Both can&apos;t be selected at the same time.</errorMessage>
</ValidationRule>