force-app/main/default/objects/Closing_Commission__c/validationRules/Split_Commission_Not_Null.validationRule-meta.xml
<ValidationRule>
    <fullName>Split_Commission_Not_Null</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISBLANK(TEXT( Agent_Split_Commision_Type__c ))),
ISBLANK( Agent_Split_Commission1__c )
)

||
AND(
ISBLANK(TEXT(Agent_Split_Commision_Type__c)),
NOT(ISBLANK( Agent_Split_Commission1__c ))
)</errorConditionFormula>
    <errorMessage>Agent Split Commission Type &amp; Agent Split Commission is required</errorMessage>
</ValidationRule>