force-app/main/default/objects/Closing_Commission__c/validationRules/User_Division_and_Agent_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>User_Division_and_Agent_Type</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
NOT(ISBLANK( Lux_Agent__c)),
ISPICKVAL( User_Division__c , &apos;Exclusive_Projects_Broker&apos;),
ISPICKVAL( Agent_Type__c , &apos;Resale Broker&apos;)
)</errorConditionFormula>
    <errorDisplayField>Agent_Type__c</errorDisplayField>
    <errorMessage>When User Division is &quot;Exclusive Projects Broker&quot; then Agent Type is Not &quot;Resale Broker&quot;.</errorMessage>
</ValidationRule>