force-app/main/default/objects/Closing_Commission__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Closing__c</columns>
    <columns>Agent_Type__c</columns>
    <columns>Lux_Agent__c</columns>
    <columns>Third_Party_Agent__c</columns>
    <columns>X3rd_Party_Agency__c</columns>
    <columns>X3rd_Party_Name__c</columns>
    <columns>Commission_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Closing Commissions</label>
</ListView>